@startuml

title __FINANCE's Class Diagram__\n

  package com.koltunm.skanner {
    package com.koltunm.skanner.clients {
      package com.koltunm.skanner.clients.finance {
        interface FinanceInterface {
            {abstract} + getHistoricalStockData()
        }
      }
    }
  }
  

  package com.koltunm.skanner {
    package com.koltunm.skanner.clients {
      package com.koltunm.skanner.clients.finance {
        enum FinanceInterval {
          ONE_MIN
          TWO_MIN
          FIVE_MIN
          FIFTEEN_MIN
          THIRTY_MIN
          SIXTY_MIN
          NINTY_MIN
          ONE_HOUR
          ONE_DAY
          FIVE_DAYS
          ONE_WEEK
          ONE_MONTH
          THREE_MONTHS
          FIVE_MONTHS
          ONE_YEAR
          TWO_YEARS
          FIVE_YEARS
          TEN_YEARS
          YEAR_TO_DATE
          MAX
          term
        }
      }
    }
  }
  

  package com.koltunm.skanner {
    package com.koltunm.skanner.clients {
      package com.koltunm.skanner.clients.finance {
        enum FinanceStockEvent {
          DIVIDENDS
          EARNINGS
          SPLITS
          event
        }
      }
    }
  }
  

  package com.koltunm.skanner {
    package com.koltunm.skanner.clients {
      package com.koltunm.skanner.clients.finance {
        class Stock {
            - symbol : String
            - exchangeName : String
            + Stock()
            + getSymbol()
            + setSymbol()
            + getExchangeName()
            + setExchangeName()
        }
      }
    }
  }
  

  package com.koltunm.skanner {
    package com.koltunm.skanner.clients {
      package com.koltunm.skanner.clients.finance {
        class StockQuote {
            - open : BigDecimal
            - close : BigDecimal
            - low : BigDecimal
            - high : BigDecimal
            - adjClose : BigDecimal
            - volume : Long
            - date : LocalDate
            + StockQuote()
            + toString()
            + getOpen()
            + setOpen()
            + getClose()
            + setClose()
            + getLow()
            + setLow()
            + getHigh()
            + setHigh()
            + getAdjClose()
            + setAdjClose()
            + getDate()
            + setDate()
            + getVolume()
            + setVolume()
        }
      }
    }
  }
  

  package com.koltunm.skanner {
    package com.koltunm.skanner.clients {
      package com.koltunm.skanner.clients.finance {
        class YahooClient {
            + YahooClient()
            - getBaseRequest()
            + getHistoricalStockData()
            - jsonToHistoricalQuote()
            + getArticles()
        }
      }
    }
  }
  

  YahooClient -up-|> FinanceInterface
  YahooClient -up-|> NewsInterface
  YahooClient -up-|> AbstractClient


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
